--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/assessment?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 
+spring.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
+spring.security.user.name=user
+spring.security.user.password=user
+spring.thymeleaf.cache=true
